--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -22,30 +22,42 @@
     <h2>Save Money</h2>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Email</div>
-        <div class="col">williamvillalobos@gmail.com</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+
+        <div class="col font-weight-bold">Frequency</div>
+        <div class="col font-weight-bold">Monthly Cost</div>
+        <div class="col text-right font-weight-bold"></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Password</div>
-        <div class="col">******</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+
+        <div class="col">Standard (Monthly)</div>
+        <div class="col">$0.00/DPU</div>
+        <div class="col text-right"><i class="fas fa-check"></i></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Temporary</div>
-        <div class="col">******</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+
+        <div class="col">Standard (Every 6 Months)</div>
+        <div class="col">$0.00/DPU</div>
+        <div class="col text-right"><a class="" href="#">UPGRADE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Temporary</div>
-        <div class="col">******</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+
+        <div class="col">Standard (Annual)</div>
+        <div class="col">$0.00/DPU</div>
+        <div class="col text-right"><a class="" href="#">UPGRADE</a></div>
+      </div>
+    </div>
+    <div class="field-set">
+      <div class="row">
+
+        <div class="col">Pro (Monthly)</div>
+        <div class="col">$0.00/DPU</div>
+        <div class="col text-right"><a class="" href="#">UPGRADE</a></div>
       </div>
     </div>
   </div>
