--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -13,7 +13,7 @@
       <div class="row">
         <div class="col font-weight-bold">Email</div>
         <div class="col">williamvillalobos@gmail.com</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
   </div>
@@ -25,7 +25,7 @@
 
         <div class="col font-weight-bold">Frequency</div>
         <div class="col font-weight-bold">Monthly Cost</div>
-        <div class="col text-right font-weight-bold"></div>
+        <div class="col-2 text-right font-weight-bold"></div>
       </div>
     </div>
     <div class="field-set">
@@ -33,7 +33,7 @@
 
         <div class="col">Standard (Monthly)</div>
         <div class="col">$0.00/DPU</div>
-        <div class="col text-right"><i class="fas fa-check"></i></div>
+        <div class="col-2 text-right"><i class="fas fa-check"></i></div>
       </div>
     </div>
     <div class="field-set">
@@ -41,7 +41,7 @@
 
         <div class="col">Standard (Every 6 Months)</div>
         <div class="col">$0.00/DPU</div>
-        <div class="col text-right"><a class="" href="#">UPGRADE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">UPGRADE</a></div>
       </div>
     </div>
     <div class="field-set">
@@ -49,7 +49,7 @@
 
         <div class="col">Standard (Annual)</div>
         <div class="col">$0.00/DPU</div>
-        <div class="col text-right"><a class="" href="#">UPGRADE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">UPGRADE</a></div>
       </div>
     </div>
     <div class="field-set">
@@ -57,7 +57,7 @@
 
         <div class="col">Pro (Monthly)</div>
         <div class="col">$0.00/DPU</div>
-        <div class="col text-right"><a class="" href="#">UPGRADE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">UPGRADE</a></div>
       </div>
     </div>
   </div>
@@ -68,14 +68,14 @@
       <div class="row">
         <div class="col font-weight-bold">Email</div>
         <div class="col">williamvillalobos@gmail.com</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Password</div>
         <div class="col">******</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
   </div>
@@ -89,42 +89,42 @@
       <div class="row">
         <div class="col font-weight-bold">First Name</div>
         <div class="col">William</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Last Name</div>
         <div class="col">Villalobos</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Phone</div>
         <div class="col">Temporary</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Street</div>
         <div class="col">Temporary</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">City</div>
         <div class="col">Temporary</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">State</div>
         <div class="col">Temporary</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
   </div>
@@ -138,42 +138,42 @@
       <div class="row">
         <div class="col font-weight-bold">First Name</div>
         <div class="col">William</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Last Name</div>
         <div class="col">Villalobos</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Phone</div>
         <div class="col">Temporary</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Street</div>
         <div class="col">Temporary</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">City</div>
         <div class="col">Temporary</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">State</div>
         <div class="col">Temporary</div>
-        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
   </div>
