--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -24,7 +24,7 @@
     --futures-color: #f91c52;
     --futures-color-purple: #a383ff;
     --futures-font-color: #585858;
-    --futures-hover-font-color: #212529;
+    --futures-hover-font-color: black;
     --futures-secondary-font: 'brandon_grotesquebold', sans-serif;
     --futures-secondary-font: 'Nunito', sans-serif;
     font-size: 18px;
