--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -11,7 +11,7 @@
     <h2>Scale Your Design</h2>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Email</div>
+        <div class="col little-title">Email</div>
         <div class="col">williamvillalobos@gmail.com</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
@@ -23,14 +23,13 @@
     <div class="field-set">
       <div class="row">
 
-        <div class="col font-weight-bold">Frequency</div>
-        <div class="col font-weight-bold">Monthly Cost</div>
+        <div class="col little-title">Frequency</div>
+        <div class="col little-title">Monthly Cost</div>
         <div class="col-2 text-right font-weight-bold"></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-
         <div class="col">Standard (Monthly)</div>
         <div class="col">$0.00/DPU</div>
         <div class="col-2 text-right"><i class="fas fa-check"></i></div>
@@ -66,14 +65,14 @@
     <h2>Account Details</h2>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Email</div>
+        <div class="col little-title">Email</div>
         <div class="col">williamvillalobos@gmail.com</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Password</div>
+        <div class="col little-title">Password</div>
         <div class="col">******</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
@@ -87,42 +86,42 @@
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">First Name</div>
+        <div class="col little-title">First Name</div>
         <div class="col">William</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Last Name</div>
+        <div class="col little-title">Last Name</div>
         <div class="col">Villalobos</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Phone</div>
+        <div class="col little-title">Phone</div>
         <div class="col">Temporary</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Street</div>
+        <div class="col little-title">Street</div>
         <div class="col">Temporary</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">City</div>
+        <div class="col little-title">City</div>
         <div class="col">Temporary</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">State</div>
+        <div class="col little-title">State</div>
         <div class="col">Temporary</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
@@ -136,42 +135,42 @@
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">First Name</div>
+        <div class="col little-title">First Name</div>
         <div class="col">William</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Last Name</div>
+        <div class="col little-title">Last Name</div>
         <div class="col">Villalobos</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Phone</div>
+        <div class="col little-title">Phone</div>
         <div class="col">Temporary</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">Street</div>
+        <div class="col little-title">Street</div>
         <div class="col">Temporary</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">City</div>
+        <div class="col little-title">City</div>
         <div class="col">Temporary</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">State</div>
+        <div class="col little-title">State</div>
         <div class="col">Temporary</div>
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
