--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -16,6 +16,12 @@
         <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
+    <div class="mt-4">
+      <div class="">
+        <a href="" class="btn-transparent">+ Invite another user</a>
+      </div>
+      <button class="mt-4 ml-0 btn btn-futures">Send Invites</a>
+    </div>
   </div>
   <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
   <div class="settings">
