--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -25,7 +25,7 @@
   </div>
   <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
   <div class="settings">
-    <h2>Save Money</h2>
+    <h2>Membership Payment Settings</h2>
     <div class="field-set">
       <div class="row">
 
