--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -11,16 +11,20 @@
     <h2>Scale Your Design</h2>
     <div class="field-set">
       <div class="row">
-        <div class="col little-title">Email</div>
-        <div class="col">williamvillalobos@gmail.com</div>
-        <div class="col-2 text-right"><a class="" href="#">CHANGE</a></div>
+        <div class="col-3 little-title">1 APU</div>
+        <div class="col">
+          Active Project Unit (APU):<br>
+          It is the measurement on how many projects you can have started at once. Next day delivery before midnight on
+          a business day submission ratio applies on all projects, unless stated otherwise by your account executive.
+        </div>
+
       </div>
     </div>
     <div class="mt-4">
       <div class="">
-        <a href="" class="btn-transparent">+ Invite another user</a>
+        <a href="" class="btn-transparent">+ Add another Apu</a>
       </div>
-      <button class="mt-4 ml-0 btn btn-futures">Send Invites</a>
+      <button class="mt-4 ml-0 btn btn-futures">SUBMIT</a>
     </div>
   </div>
   <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
