--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -22,7 +22,7 @@
     </div>
     <div class="mt-4">
       <div class="">
-        <a href="" class="btn-transparent">+ Add another Apu</a>
+        <a href="" class="btn-transparent">+ Add Another Apu</a>
       </div>
       <button class="mt-4 ml-0 btn btn-futures">SUBMIT</a>
     </div>
