--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -11,11 +11,11 @@
     <h2>Scale Your Design</h2>
     <div class="field-set">
       <div class="row">
-        <div class="col-3 little-title">1 APU</div>
+        <div class="col-2 little-title">1 APU</div>
+        <div class="col-3">Active Project Unit (APU):</div>
         <div class="col">
-          Active Project Unit (APU):<br>
           It is the measurement on how many projects you can have started at once. Next day delivery before midnight on
-          a business day submission ratio applies on all projects, unless stated otherwise by your account executive.
+          a business day submission ratio applies to all projects, unless stated otherwise by your account executive.
         </div>
 
       </div>
