--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -12,7 +12,7 @@
     <div class="field-set">
       <div class="row">
         <div class="col-2 little-title">1 APU</div>
-        <div class="col-3">Active Project Unit (APU):</div>
+        <div class="col-3">Active Project Unit (APU)</div>
         <div class="col">
           It is the measurement on how many projects you can have started at once. Next day delivery before midnight on
           a business day submission ratio applies to all projects, unless stated otherwise by your account executive.
