--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -1,4 +1,7 @@
 {% extends 'layout2.twig' %}
+{% block headlinks %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+{% endblock %}
 {% block content %}
 <!-- Main content Header-->
 <div class="header">
@@ -16,23 +19,12 @@
         <div class="col">
           <ul style="list-style-type: none">
 
-            <li><i class="fas fa-check pr-2"></i>An APU is the measurement on how many projects you can have started at
-              once.
-            </li>
-            <li><i class="fas fa-check pr-2"></i>Next day delivery before midnight on a business day submission ratio
-              applies
-              to
-              all projects, unless
+            <li>An APU is the measurement on how many projects you can have started at once.</li>
+            <li>Next day delivery before midnight on a business day submission ratio applies to all projects, unless
               stated otherwise by your account executive.</li>
-            <li><i class="fas fa-check pr-2"></i> Adding APUs is a simple and effective way to add productivity and
-              reduce
-              costs
-              to your Graphic Design
+            <li>Adding APUs is a simple and effective way to add productivity and reduce costs to your Graphic Design
               production quota.</li>
-            <li><i class="fas fa-check pr-2"></i> Every new APU you add to your membership benefits from a cost cut of
-              20%
-              than
-              that of buying a new
+            <li>Every new APU you add to your membership benefits from a cost cut of 20% than that of buying a new
               subscription.
             </li>
           </ul>
