--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -168,19 +168,24 @@
             </div>
             <div class="sidebar-link py-2 {% if active == "settings" %}sidebar-active{% endif %}">
               <div class="">
-                <a class="text-link {% if active == "settings" %}active{% endif %}"
-                  href="/thefutures/dashboard/settings">Account Settings</a>
+                <a class="text-link {% if active == "productivity" %}active{% endif %}"
+                  href="/thefutures/dashboard/productivity">Manage Productivity</a>
               </div>
             </div>
             <div class="sidebar-link py-2">
               &nbsp;
             </div>
-
             <div class="sidebar-link py-2">
               <div class="">
                 <a class="text-link" class="text-link" href="#">
                   Knowledge Base (Soon)
                 </a>
+              </div>
+            </div>
+            <div class="sidebar-link py-2 {% if active == "settings" %}sidebar-active{% endif %}">
+              <div class="">
+                <a class="text-link {% if active == "settings" %}active{% endif %}"
+                  href="/thefutures/dashboard/settings">Account Settings</a>
               </div>
             </div>
             <div class="sidebar-link py-2">
