--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -54,7 +54,7 @@
   <!-- Add your site or app content here -->
 
   <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav class="navbar navbar-expand-md fixed-top navbar-light">
     <!-- Navbar brand -->
     <a class="navbar-brand" href="#"><img src="https://thefutures.io/img/logotipo.png" style="height: 3rem;" alt=""></a>
     <!-- Collapse button -->
