--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -7,6 +7,8 @@
 nav.navbar {
     font-family: 'Brandon Grotesque Bold', sans-serif;
     font-size: 14px;
+    z-index: 9999;
+    background: #fff;
 }
 
 .nav-link {
