--- a/public/styles/request.css
+++ b/public/styles/request.css
@@ -42,6 +42,7 @@
     background-color: #fff;
 }
 
-.project-request .active {
+.project-request .nav-link,
+.nav-tabs .nav-link.active {
     color: black;
 }
