--- a/public/styles/sidebar.css
+++ b/public/styles/sidebar.css
@@ -111,6 +111,7 @@ body {
 
 .page-wrapper {
     min-height: 90vh;
+    padding-top: 68px;
 }
 
 .page-wrapper .theme {
@@ -154,7 +155,7 @@ body {
     width: 260px;
     height: 100%;
     max-height: 100%;
-    position: absolute;
+    position: fixed;
     top: 67px;
     left: -300px;
     z-index: 999;
