--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -126,13 +126,60 @@
       </ul>
       <!-- Links -->
   </nav>
-
-
   <div>
     <div class="page-wrapper chiller-theme toggled">
-      <a id="show-sidebar" class="btn btn-futures" href="#">
-        <i class="fas fa-bars"></i>
-      </a>
+      <div class="position-absolute bg-white h-100">
+        <div>
+          <a id="show-sidebar" class="btn btn-futures" href="#">
+            <i class="fas fa-bars"></i>
+          </a>
+        </div>
+        <div class="mt-4">
+          <a id="show-sidebar" class="btn btn-futures" href="#">
+            <i class="fas fa-align-left"></i>
+          </a>
+        </div>
+        <div class="mt-4">
+          <a id="show-sidebar" class="btn btn-futures" href="#">
+            <i class="fas fa-tasks"></i>
+          </a>
+        </div>
+        <div class="mt-4">
+          <a id="show-sidebar" class="btn btn-futures" href="#">
+            <i class="fas fa-folder"></i>
+          </a>
+        </div>
+        <div class="mt-4">
+          <a id="show-sidebar" class="btn btn-futures" href="#">
+            <i class="fas fa-user-friends"></i>
+          </a>
+        </div>
+        <div class="mt-4">
+          <a id="show-sidebar" class="btn btn-futures" href="#">
+            <i class="fas fa-rocket"></i>
+          </a>
+        </div>
+        <div class="mt-4">
+          <a id="show-sidebar" class="btn btn-futures" href="#">
+            <i class="fab fa-leanpub"></i>
+          </a>
+        </div>
+        <div class="mt-4">
+          <a id="show-sidebar" class="btn btn-futures" href="#">
+            <i class="fas fa-cog"></i>
+          </a>
+        </div>
+        <div class="mt-4">
+          <a id="show-sidebar" class="btn btn-futures" href="#">
+            <i class="fas fa-receipt"></i>
+          </a>
+        </div>
+        <div class="mt-4">
+          <a id="show-sidebar" class="btn btn-futures" href="#">
+            <i class="fas fa-scroll"></i>
+          </a>
+        </div>
+      </div>
       <nav id="sidebar" class="sidebar-wrapper">
         <div class="sidebar-content">
           <div class="sidebar-brand">
@@ -209,7 +256,7 @@
       </nav>
       <!-- sidebar-wrapper  -->
       <main class="page-content">
-        <div class="container-fluid pt-0">
+        <div class="container-fluid">
           <div class="main-content">
             {% block content %}{% endblock %}
           </div>
