--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -100,7 +100,7 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Support</a>
+          <a class="nav-link {% if active == "support" %}sidebar-active{% endif %}" href="support">Support</a>
         </li>
         <!-- Dropdown -->
         <li class="nav-item dropdown">
@@ -128,53 +128,53 @@
   </nav>
   <div>
     <div class="page-wrapper chiller-theme toggled">
-      <div class="position-absolute bg-white h-100">
+      <div class="position-absolute h-100">
         <div>
           <a id="show-sidebar" class="btn btn-futures" href="#">
             <i class="fas fa-bars"></i>
           </a>
         </div>
-        <div class="mt-4">
+        <div class="mt-2">
           <a id="show-sidebar" class="btn btn-futures" href="#">
             <i class="fas fa-align-left"></i>
           </a>
         </div>
-        <div class="mt-4">
+        <div class="mt-2">
           <a id="show-sidebar" class="btn btn-futures" href="#">
             <i class="fas fa-tasks"></i>
           </a>
         </div>
-        <div class="mt-4">
+        <div class="mt-2">
           <a id="show-sidebar" class="btn btn-futures" href="#">
             <i class="fas fa-folder"></i>
           </a>
         </div>
-        <div class="mt-4">
+        <div class="mt-2">
           <a id="show-sidebar" class="btn btn-futures" href="#">
             <i class="fas fa-user-friends"></i>
           </a>
         </div>
-        <div class="mt-4">
+        <div class="mt-2">
           <a id="show-sidebar" class="btn btn-futures" href="#">
             <i class="fas fa-rocket"></i>
           </a>
         </div>
-        <div class="mt-4">
+        <div class="mt-2">
           <a id="show-sidebar" class="btn btn-futures" href="#">
             <i class="fab fa-leanpub"></i>
           </a>
         </div>
-        <div class="mt-4">
+        <div class="mt-2">
           <a id="show-sidebar" class="btn btn-futures" href="#">
             <i class="fas fa-cog"></i>
           </a>
         </div>
-        <div class="mt-4">
+        <div class="mt-2">
           <a id="show-sidebar" class="btn btn-futures" href="#">
             <i class="fas fa-receipt"></i>
           </a>
         </div>
-        <div class="mt-4">
+        <div class="mt-2">
           <a id="show-sidebar" class="btn btn-futures" href="#">
             <i class="fas fa-scroll"></i>
           </a>
