--- a/resources/views/manage-productivity.twig
+++ b/resources/views/manage-productivity.twig
@@ -7,7 +7,14 @@
 <div class="settings">
     <div class="field-set">
         <div class="row">
-            <div class="col-2 little-title">1 APU</div>
+            <div class="col-2 little-title">
+                <div>
+                    1 APU
+                </div>
+                <div class="">
+                    <a href="" class="btn-transparent">+ Add Another APU</a>
+                </div>
+            </div>
             <div class="col-3">Active Project Unit (APU)</div>
             <div class="col">
                 <ul style="list-style-type: none">
@@ -22,14 +29,14 @@
                         new
                         subscription.
                     </li>
+                    <li>
+                        There is a minimum commitment of 30 days per added APU.
+                    </li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="mt-4">
-        <div class="">
-            <a href="" class="btn-transparent">+ Add Another APU</a>
-        </div>
         <button class="mt-4 ml-0 btn btn-futures">SUBMIT</a>
     </div>
 </div>
