--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -141,7 +141,7 @@
         </div>
         <div class="sidebar-icon-wrapper text-center">
           <a class="text-white sidebar-icon" href="#">
-            <i class="fas fa-tasks"></i>
+            <i class="fas fa-history"></i>
           </a>
         </div>
         <div class="sidebar-icon-wrapper text-center">
